--- a/team_challenge/tercero/jorge/toolbox.ipynb
+++ b/team_challenge/tercero/jorge/toolbox.ipynb
@@ -1017,13 +1017,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 158,
    "id": "53e4b20a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ast\n",
     "import pandas as pd\n",
     "from scipy.stats import ttest_ind\n",
+    "from scipy.stats import ttest_rel\n",
+    "from scipy.stats import ttest_1samp\n",
+    "from scipy.stats import chi2_contingency\n",
+    "\n",
     "#esta la hace Jorge\n",
     "def get_features_cat_regression(df:pd.DataFrame,target_col:str=\"\", pvalue=0.05):\n",
     "    \"\"\"\n",
@@ -1063,90 +1068,351 @@
     "        if not np.issubdtype(df[columna].dtype, np.number):\n",
     "            if not np.issubdtype(df[columna].dtype, np.datetime64):\n",
     "                lista_de_categoricas.append(columna)\n",
-    "    \n",
-    "    return lista_de_categoricas\n"
+    "    #score=0\n",
+    "    #score_ttest_ind=ttest_ind()\n",
+    "    #score_ttest_rel=ttest_rel()\n",
+    "    #score_ttest_1samp=ttest_1samp()\n",
+    "    #score_chi2_contingency=chi2_contingency()\n",
+    "    #df_unique_values = pd.DataFrame(columns=lista_de_categoricas)\n",
+    "    #for columna in lista_de_categoricas:\n",
+    "    #for valor in lista_de_categoricas:\n",
+    "    #       df_unique_values[valor] = df_categoricas.groupby(valor)[valor].size()\n",
+    "    #df_unique_values = df_categoricas[lista_de_categoricas].copy()\n",
+    "    #df_unique_values = df_unique_values.drop_duplicates(inplace=True)\n",
+    "    #   df_unique_values[columna]=df_categoricas[columna].drop_duplicates()\n",
+    "    #print(df_unique_values)\n",
+    "    #dictionary_values= dict()\n",
+    "    statistic_test=list()\n",
+    "    for columna in lista_de_categoricas:\n",
+    "        unique_values=df[columna].unique()\n",
+    "        for unique_value in unique_values:\n",
+    "            statistic_test.append(df[df[columna] == unique_value][target_col])\n",
+    "            \n",
+    "    #unique_categories = df[lista_de_categoricas].unique()\n",
+    "    #print(unique_values,dictionary_values)\n",
+    "    #group_A = df[df[columna] == 'A']['NumericColumn']\n",
+    "    #group_B = df[df[columna] == 'B']['NumericColumn']\n",
+    "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 162,
+   "id": "97335a41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A' 'B' 'C'] tipo: <class 'numpy.ndarray'>\n",
+      "Processing category: A\n",
+      "  Category\n",
+      "0        A\n",
+      "2        A\n",
+      "--------------------\n",
+      "Processing category: B\n",
+      "  Category\n",
+      "1        B\n",
+      "4        B\n",
+      "--------------------\n",
+      "Processing category: C\n",
+      "  Category\n",
+      "3        C\n",
+      "5        C\n",
+      "--------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample DataFrame\n",
+    "data = {'Category': ['A', 'B', 'A', 'C', 'B', 'C']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Get unique values from the 'Category' column\n",
+    "unique_values = df['Category'].unique()\n",
+    "print(unique_values,\"tipo:\",type(unique_values))\n",
+    "# Iterate through unique values and do something with each value\n",
+    "for unique_value in unique_values:\n",
+    "    # Pass the unique value to a variable or perform any desired operation\n",
+    "    current_category = unique_value\n",
+    "    print(f\"Processing category: {current_category}\")\n",
+    "    # Do something with the current_category, for example:\n",
+    "    # perform some computation, filter the DataFrame, etc.\n",
+    "    filtered_df = df[df['Category'] == current_category]\n",
+    "    print(filtered_df)\n",
+    "    print(\"--------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "id": "95c9a921",
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"variacion\"]=\"Bajó\"\n",
     "df.loc[df[\"% var.\"]>0,\"variacion\"]=\"Subió\"\n",
-    "df.loc[df[\"% var.\"]==0.0,\"variacion\"]=\"Sin cambios\""
+    "df.loc[df[\"% var.\"]==0.0,\"variacion\"]=\"Sin cambios\"\n",
+    "df[\"variation\"]=\"Decreased\"\n",
+    "df.loc[df[\"% var.\"]>0,\"variation\"]=\"Increased\"\n",
+    "df.loc[df[\"% var.\"]==0.0,\"variation\"]=\"No changes\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 150,
+   "id": "d871d8b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Último</th>\n",
+       "      <th>Apertura</th>\n",
+       "      <th>Máximo</th>\n",
+       "      <th>Mínimo</th>\n",
+       "      <th>Vol.</th>\n",
+       "      <th>% var.</th>\n",
+       "      <th>variacion</th>\n",
+       "      <th>variation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-11-30</td>\n",
+       "      <td>15947.87</td>\n",
+       "      <td>15986.40</td>\n",
+       "      <td>16011.98</td>\n",
+       "      <td>15825.83</td>\n",
+       "      <td>4.445400e+10</td>\n",
+       "      <td>-0.25</td>\n",
+       "      <td>Bajó</td>\n",
+       "      <td>Decreased</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-11-29</td>\n",
+       "      <td>15987.60</td>\n",
+       "      <td>16111.59</td>\n",
+       "      <td>16166.18</td>\n",
+       "      <td>15976.69</td>\n",
+       "      <td>2.309800e+10</td>\n",
+       "      <td>-0.14</td>\n",
+       "      <td>Bajó</td>\n",
+       "      <td>Decreased</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-11-28</td>\n",
+       "      <td>16010.43</td>\n",
+       "      <td>15939.12</td>\n",
+       "      <td>16031.38</td>\n",
+       "      <td>15921.45</td>\n",
+       "      <td>2.385900e+10</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>Subió</td>\n",
+       "      <td>Increased</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-11-27</td>\n",
+       "      <td>15961.98</td>\n",
+       "      <td>15971.05</td>\n",
+       "      <td>16045.30</td>\n",
+       "      <td>15933.04</td>\n",
+       "      <td>2.154500e+10</td>\n",
+       "      <td>-0.11</td>\n",
+       "      <td>Bajó</td>\n",
+       "      <td>Decreased</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-11-24</td>\n",
+       "      <td>15980.11</td>\n",
+       "      <td>15972.89</td>\n",
+       "      <td>16007.42</td>\n",
+       "      <td>15940.62</td>\n",
+       "      <td>6.857000e+09</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>Bajó</td>\n",
+       "      <td>Decreased</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>2021-12-06</td>\n",
+       "      <td>15846.16</td>\n",
+       "      <td>15744.91</td>\n",
+       "      <td>15898.59</td>\n",
+       "      <td>15557.78</td>\n",
+       "      <td>2.445300e+10</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>Subió</td>\n",
+       "      <td>Increased</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500</th>\n",
+       "      <td>2021-12-03</td>\n",
+       "      <td>15712.04</td>\n",
+       "      <td>16039.41</td>\n",
+       "      <td>16089.61</td>\n",
+       "      <td>15543.31</td>\n",
+       "      <td>2.876900e+10</td>\n",
+       "      <td>-1.74</td>\n",
+       "      <td>Bajó</td>\n",
+       "      <td>Decreased</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>501</th>\n",
+       "      <td>2021-12-02</td>\n",
+       "      <td>15990.76</td>\n",
+       "      <td>15791.30</td>\n",
+       "      <td>16066.32</td>\n",
+       "      <td>15770.92</td>\n",
+       "      <td>2.521000e+10</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>Subió</td>\n",
+       "      <td>Increased</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>502</th>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>15877.72</td>\n",
+       "      <td>16347.96</td>\n",
+       "      <td>16427.19</td>\n",
+       "      <td>15864.00</td>\n",
+       "      <td>2.535500e+10</td>\n",
+       "      <td>-1.60</td>\n",
+       "      <td>Bajó</td>\n",
+       "      <td>Decreased</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>503</th>\n",
+       "      <td>2021-11-30</td>\n",
+       "      <td>16135.92</td>\n",
+       "      <td>16333.95</td>\n",
+       "      <td>16454.56</td>\n",
+       "      <td>16073.76</td>\n",
+       "      <td>4.124900e+10</td>\n",
+       "      <td>-1.61</td>\n",
+       "      <td>Bajó</td>\n",
+       "      <td>Decreased</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>503 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Fecha    Último  Apertura    Máximo    Mínimo          Vol.  % var.  \\\n",
+       "0   2023-11-30  15947.87  15986.40  16011.98  15825.83  4.445400e+10   -0.25   \n",
+       "1   2023-11-29  15987.60  16111.59  16166.18  15976.69  2.309800e+10   -0.14   \n",
+       "2   2023-11-28  16010.43  15939.12  16031.38  15921.45  2.385900e+10    0.30   \n",
+       "3   2023-11-27  15961.98  15971.05  16045.30  15933.04  2.154500e+10   -0.11   \n",
+       "4   2023-11-24  15980.11  15972.89  16007.42  15940.62  6.857000e+09   -0.13   \n",
+       "..         ...       ...       ...       ...       ...           ...     ...   \n",
+       "499 2021-12-06  15846.16  15744.91  15898.59  15557.78  2.445300e+10    0.85   \n",
+       "500 2021-12-03  15712.04  16039.41  16089.61  15543.31  2.876900e+10   -1.74   \n",
+       "501 2021-12-02  15990.76  15791.30  16066.32  15770.92  2.521000e+10    0.71   \n",
+       "502 2021-12-01  15877.72  16347.96  16427.19  15864.00  2.535500e+10   -1.60   \n",
+       "503 2021-11-30  16135.92  16333.95  16454.56  16073.76  4.124900e+10   -1.61   \n",
+       "\n",
+       "    variacion  variation  \n",
+       "0        Bajó  Decreased  \n",
+       "1        Bajó  Decreased  \n",
+       "2       Subió  Increased  \n",
+       "3        Bajó  Decreased  \n",
+       "4        Bajó  Decreased  \n",
+       "..        ...        ...  \n",
+       "499     Subió  Increased  \n",
+       "500      Bajó  Decreased  \n",
+       "501     Subió  Increased  \n",
+       "502      Bajó  Decreased  \n",
+       "503      Bajó  Decreased  \n",
+       "\n",
+       "[503 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "id": "ce83cbe4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "variacion\n",
-       "Bajó           251\n",
-       "Subió          251\n",
-       "Sin cambios      1\n",
-       "Name: count, dtype: int64"
+       "251"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.variacion.value_counts()"
+    "df.variacion.value_counts().iloc[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "8ba3afd5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Fecha',\n",
-       " 'Último',\n",
-       " 'Apertura',\n",
-       " 'Máximo',\n",
-       " 'Mínimo',\n",
-       " 'Vol.',\n",
-       " '% var.',\n",
-       " 'variacion']"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns.to_list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 159,
    "id": "ef8677c8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['variacion']"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             variacion  variation\n",
+      "variacion                        \n",
+      "Bajó               251        NaN\n",
+      "Sin cambios          1        NaN\n",
+      "Subió              251        NaN\n"
+     ]
     }
    ],
    "source": [
