--- a/team_challenge/tercero/principal/toolbox.ipynb
+++ b/team_challenge/tercero/principal/toolbox.ipynb
@@ -977,15 +977,11 @@
     "    \"\"\"\n",
     "    \n",
     "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
-    "    if target_col not in df.columns:\n",
-    "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
-    "        return None\n",
-    "\n",
-    "    # Verificamos si 'target_col' es una variable numérica continua\n",
-    "    if not np.issubdtype(df[target_col].dtype, np.number):\n",
+    "# Verificamos si 'target_col' es una variable numérica continua\n",
+    "    if target_col and not np.issubdtype(df[target_col].dtype, np.number):\n",
     "        print(f\"Error: La columna '{target_col}' no es una variable numérica continua.\")\n",
     "        return None\n",
-    "\n",
+    "    \n",
     "    # Verificamos si 'umbral_corr' está en el rango [0, 1]\n",
     "    if not (0 <= umbral_corr <= 1):\n",
     "        print(\"Error: Se ha indicado un 'umbral_corr' incorrecto, debe estar entre el rango [0, 1].\")\n",
@@ -995,7 +991,29 @@
     "    if pvalue is not None and (not isinstance(pvalue, (float, int)) or pvalue <= 0 or pvalue >= 1):\n",
     "        print(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
     "        return None\n",
-    "    pass"
+    "    \n",
+    "    # Si 'target_col' está presente, excluimos esa columna\n",
+    "    columns = df.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "    if target_col:\n",
+    "        columns.remove(target_col)\n",
+    "    \n",
+    "    # Filtramos las columnas basadas en 'umbral_corr' y 'pvalue'\n",
+    "    selected_columns = []\n",
+    "    for col in columns:\n",
+    "        if target_col:\n",
+    "            corr, p_value = pearsonr(df[col], df[target_col])\n",
+    "            if abs(corr) > umbral_corr and (pvalue is None or p_value < 1 - pvalue):\n",
+    "                selected_columns.append(col)\n",
+    "    \n",
+    "    # Si no hay columnas seleccionadas, mostramos un mensaje y devolvemos None\n",
+    "    if not selected_columns:\n",
+    "        print(\"No hay columnas que cumplan con los criterios de selección.\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Pintamos los pairplots\n",
+    "    sns.pairplot(df[selected_columns + [target_col]])\n",
+    "    \n",
+    "    return selected_columns\n"
    ]
   },
   {
