--- a/team_challenge/tercero/jorge/pruebas.ipynb
+++ b/team_challenge/tercero/jorge/pruebas.ipynb
@@ -2,6 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample DataFrame\n",
+    "data = {'Category': ['A', 'B', 'A', 'C', 'B', 'C']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Get unique values from the 'Category' column\n",
+    "unique_values = df['Category'].unique()\n",
+    "print(unique_values,\"tipo:\",type(unique_values))\n",
+    "# Iterate through unique values and do something with each value\n",
+    "for unique_value in unique_values:\n",
+    "    # Pass the unique value to a variable or perform any desired operation\n",
+    "    current_category = unique_value\n",
+    "    print(f\"Processing category: {current_category}\")\n",
+    "    # Do something with the current_category, for example:\n",
+    "    # perform some computation, filter the DataFrame, etc.\n",
+    "    filtered_df = df[df['Category'] == current_category]\n",
+    "    print(filtered_df)\n",
+    "    print(\"--------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
