--- a/team_challenge/tercero/jorge/toolbox.ipynb
+++ b/team_challenge/tercero/jorge/toolbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "934736fb-9604-4a99-9808-e8daa3aea56a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e958cccf-e70c-469f-87cf-5ebbb4fd7882",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7aca7a16-4caa-473b-b5b0-3cf9177e8672",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fb27737b-6955-44f3-ad78-947d73f73928",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "freq         5  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9b5c81ca-5e86-4fcb-89d2-652ff5663393",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "4  24.11.2023  15.980,11  15.972,89  16.007,42  15.940,62   68,57M  -0,13%"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "345e4ba4",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ad77aced",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a91c2210-0994-422e-a20c-3a26e13fdcc0",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b3d07c75",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e986ef5c",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "c65ba6eb-2149-4ad4-84cf-9c0144aeb7a8",
    "metadata": {},
    "outputs": [],
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "3df7192c-ab2d-45f6-8738-0948f88f4800",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
        "Cardinalidad (%)     97.81    69.18  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "c3f580f5",
    "metadata": {},
    "outputs": [],
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "ad7b6370",
    "metadata": {},
    "outputs": [
@@ -908,12 +908,12 @@
      "data": {
       "text/plain": [
        "[('Último', 0.9972805808746535, 0.0),\n",
-       " ('Apertura', 0.9973535582132576, 0.0),\n",
-       " ('Máximo', 0.9972570817269242, 0.0),\n",
+       " ('Apertura', 0.9973535582132573, 0.0),\n",
+       " ('Máximo', 0.997257081726924, 0.0),\n",
        " ('Mínimo', 0.9999999999999999, 0.0)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "id": "677d7da6",
    "metadata": {},
    "outputs": [],
@@ -978,17 +978,10 @@
     "\n",
     "    sns.pairplot: Pairplot\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
-    "    if target_col not in df.columns:\n",
-    "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
-    "        return None\n",
-    "\n",
-    "    # Verificamos si 'target_col' es una variable numérica continua\n",
-    "    if not np.issubdtype(df[target_col].dtype, np.number):\n",
+    "    if target_col and not np.issubdtype(df[target_col].dtype, np.number):\n",
     "        print(f\"Error: La columna '{target_col}' no es una variable numérica continua.\")\n",
     "        return None\n",
-    "\n",
+    "    \n",
     "    # Verificamos si 'umbral_corr' está en el rango [0, 1]\n",
     "    if not (0 <= umbral_corr <= 1):\n",
     "        print(\"Error: Se ha indicado un 'umbral_corr' incorrecto, debe estar entre el rango [0, 1].\")\n",
@@ -998,7 +991,29 @@
     "    if pvalue is not None and (not isinstance(pvalue, (float, int)) or pvalue <= 0 or pvalue >= 1):\n",
     "        print(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
     "        return None\n",
-    "    pass"
+    "    \n",
+    "    # Si 'target_col' está presente, excluimos esa columna\n",
+    "    columns = df.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "    if target_col:\n",
+    "        columns.remove(target_col)\n",
+    "    \n",
+    "    # Filtramos las columnas basadas en 'umbral_corr' y 'pvalue'\n",
+    "    selected_columns = []\n",
+    "    for col in columns:\n",
+    "        if target_col:\n",
+    "            corr, p_value = pearsonr(df[col], df[target_col])\n",
+    "            if abs(corr) > umbral_corr and (pvalue is None or p_value < 1 - pvalue):\n",
+    "                selected_columns.append(col)\n",
+    "    \n",
+    "    # Si no hay columnas seleccionadas, mostramos un mensaje y devolvemos None\n",
+    "    if not selected_columns:\n",
+    "        print(\"No hay columnas que cumplan con los criterios de selección.\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Pintamos los pairplots\n",
+    "    sns.pairplot(df[selected_columns + [target_col]])\n",
+    "    \n",
+    "    return selected_columns"
    ]
   },
   {
@@ -1017,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 86,
    "id": "53e4b20a",
    "metadata": {},
    "outputs": [],
@@ -1028,7 +1043,7 @@
     "from scipy.stats import ttest_rel\n",
     "from scipy.stats import ttest_1samp\n",
     "from scipy.stats import chi2_contingency\n",
-    "\n",
+    "from scipy.stats import f_oneway\n",
     "#esta la hace Jorge\n",
     "def get_features_cat_regression(df:pd.DataFrame,target_col:str=\"\", pvalue=0.05):\n",
     "    \"\"\"\n",
@@ -1049,6 +1064,7 @@
     "\n",
     "    list: columnas categóricas del dataframe cuyo test de relación con la columna designada por 'target_col' supere en confianza estadística el test de relación que sea necesario hacer\n",
     "    \"\"\"\n",
+    "    \n",
     "    lista_de_categoricas=list()\n",
     "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
     "    if target_col not in df.columns:\n",
@@ -1083,72 +1099,37 @@
     "    #print(df_unique_values)\n",
     "    #dictionary_values= dict()\n",
     "    statistic_test=list()\n",
-    "    for columna in lista_de_categoricas:\n",
+    "    selected_columns = []\n",
+    "    for columna in lista_de_categoricas:#averiguo los valores únicos\n",
     "        unique_values=df[columna].unique()\n",
-    "        for unique_value in unique_values:\n",
-    "            statistic_test.append(df[df[columna] == unique_value][target_col])\n",
-    "            \n",
-    "    #unique_categories = df[lista_de_categoricas].unique()\n",
-    "    #print(unique_values,dictionary_values)\n",
-    "    #group_A = df[df[columna] == 'A']['NumericColumn']\n",
-    "    #group_B = df[df[columna] == 'B']['NumericColumn']\n",
-    "    return None"
+    "        parametros=\"\" # para formar la llamada dinámicamente a t-test y chi cuadrado\n",
+    "        for valor in unique_values:\n",
+    "            parametros=parametros + f'df[\"{target_col}\"][df[\"{columna}\"]==\"{valor}\"]'\n",
+    "            if valor != unique_values[len(unique_values)-1]:\n",
+    "                parametros=parametros + \",\"\n",
+    "        # Create a dictionary to store variable values\n",
+    "        variables = {}\n",
+    "        # Execute the dynamic code and capture variables in the dictionary\n",
+    "        exec(f\"t_statistic,p_value = f_oneway({parametros})\", globals(), variables)\n",
+    "        if variables['p_value']<pvalue:\n",
+    "            selected_columns.append(columna)\n",
+    "        else:\n",
+    "            variables = {}\n",
+    "            sentencia=f\"chi2_stat, p_value, dof, expected = chi2_contingency(pd.crosstab(df['{columna}'], df['{target_col}']))\"\n",
+    "            exec(sentencia, globals(), variables)\n",
+    "            if variables['p_value']>pvalue:\n",
+    "                selected_columns.append(columna)\n",
+    "        if not selected_columns:\n",
+    "            print(\"No hay columnas que cumplan con los criterios de selección.\")\n",
+    "            return None      \n",
+    "        else:\n",
+    "            return selected_columns\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "97335a41",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['A' 'B' 'C'] tipo: <class 'numpy.ndarray'>\n",
-      "Processing category: A\n",
-      "  Category\n",
-      "0        A\n",
-      "2        A\n",
-      "--------------------\n",
-      "Processing category: B\n",
-      "  Category\n",
-      "1        B\n",
-      "4        B\n",
-      "--------------------\n",
-      "Processing category: C\n",
-      "  Category\n",
-      "3        C\n",
-      "5        C\n",
-      "--------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Sample DataFrame\n",
-    "data = {'Category': ['A', 'B', 'A', 'C', 'B', 'C']}\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# Get unique values from the 'Category' column\n",
-    "unique_values = df['Category'].unique()\n",
-    "print(unique_values,\"tipo:\",type(unique_values))\n",
-    "# Iterate through unique values and do something with each value\n",
-    "for unique_value in unique_values:\n",
-    "    # Pass the unique value to a variable or perform any desired operation\n",
-    "    current_category = unique_value\n",
-    "    print(f\"Processing category: {current_category}\")\n",
-    "    # Do something with the current_category, for example:\n",
-    "    # perform some computation, filter the DataFrame, etc.\n",
-    "    filtered_df = df[df['Category'] == current_category]\n",
-    "    print(filtered_df)\n",
-    "    print(\"--------------------\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 30,
    "id": "95c9a921",
    "metadata": {},
    "outputs": [],
@@ -1399,36 +1380,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "ef8677c8",
+   "execution_count": 58,
+   "id": "77a54810",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             variacion  variation\n",
-      "variacion                        \n",
-      "Bajó               251        NaN\n",
-      "Sin cambios          1        NaN\n",
-      "Subió              251        NaN\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_features_cat_regression(df,\"Mínimo\",0.05)"
+    "t_statistic,p_value = f_oneway(df[\"Mínimo\"][df[\"variacion\"]==\"Bajó\"],df[\"Mínimo\"][df[\"variacion\"]==\"Subió\"],df[\"Mínimo\"][df[\"variacion\"]==\"Sin cambios\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "45289d82",
+   "id": "10193501",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "1.2140127719954223"
       ]
      },
      "execution_count": 59,
@@ -1436,7 +1405,112 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "t_statistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "feccdb28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_statistic = f_oneway(df[\"Mínimo\"][df[\"variacion\"]==\"Bajó\"],df[\"Mínimo\"][df[\"variacion\"]==\"Subió\"],df[\"Mínimo\"][df[\"variacion\"]==\"Sin cambios\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a4c6b81f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.29787700100290593"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "2fe5122f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dynamic code generation with a result dictionary\n",
+    "dynamic_code = \"x = 10\\nresult = x * 2\\noutput = {'x': x, 'result': result}\"\n",
+    "\n",
+    "# Create a dictionary to store variable values\n",
+    "variables = {}\n",
+    "\n",
+    "# Execute the dynamic code and capture variables in the dictionary\n",
+    "exec(dynamic_code, globals(), variables)\n",
+    "\n",
+    "# Access the variables defined in the dynamic code\n",
+    "print(variables['x'])  # Output: 10\n",
+    "print(variables['result'])  # Output: 20\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "f0b7899d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['variacion']"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "listadecolumnas= get_features_cat_regression(df,\"Mínimo\",0.05)\n",
+    "listadecolumnas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "45289d82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "code_block = \"x = 10\\ny = x * 2\\nprint(y)\"\n",
+    "exec(code_block)  # Output: 20"
+   ]
   },
   {
    "cell_type": "code",
