--- a/team_challenge/tercero/principal/toolbox.ipynb
+++ b/team_challenge/tercero/principal/toolbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "934736fb-9604-4a99-9808-e8daa3aea56a",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import toolbox_ML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e958cccf-e70c-469f-87cf-5ebbb4fd7882",
    "metadata": {},
    "outputs": [],
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "7aca7a16-4caa-473b-b5b0-3cf9177e8672",
    "metadata": {},
    "outputs": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "fb27737b-6955-44f3-ad78-947d73f73928",
    "metadata": {},
    "outputs": [
@@ -149,7 +150,7 @@
        "freq         5  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "9b5c81ca-5e86-4fcb-89d2-652ff5663393",
    "metadata": {},
    "outputs": [
@@ -258,7 +259,7 @@
        "4  24.11.2023  15.980,11  15.972,89  16.007,42  15.940,62   68,57M  -0,13%"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "345e4ba4",
    "metadata": {},
    "outputs": [],
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "ad77aced",
    "metadata": {},
    "outputs": [],
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "a91c2210-0994-422e-a20c-3a26e13fdcc0",
    "metadata": {},
    "outputs": [],
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "b3d07c75",
    "metadata": {},
    "outputs": [],
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "e986ef5c",
    "metadata": {},
    "outputs": [],
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "4a40612f",
    "metadata": {},
    "outputs": [
@@ -499,7 +500,7 @@
        "[503 rows x 7 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "594ccc33-b869-4b50-a99a-f58fe2c94604",
    "metadata": {},
    "outputs": [],
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "57576ce0-aed2-4d1a-af47-e17d88514fbc",
    "metadata": {},
    "outputs": [
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "c65ba6eb-2149-4ad4-84cf-9c0144aeb7a8",
    "metadata": {},
    "outputs": [],
