--- a/team_challenge/tercero/jorge/pruebas.ipynb
+++ b/team_challenge/tercero/jorge/pruebas.ipynb
@@ -29,6 +29,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_and_return_result(x, y):\n",
+    "    code_to_execute = f\"result = {x} + {y}\"\n",
+    "    \n",
+    "    # Create a dictionary to hold the local variables\n",
+    "    local_variables = {}\n",
+    "    \n",
+    "    # Execute the code and store the result in the 'result' variable\n",
+    "    exec(code_to_execute, {}, local_variables)\n",
+    "    result={}\n",
+    "    # Access the result from the local variables\n",
+    "    result['result'] = local_variables.get('result', None)\n",
+    "    result['x'] = local_variables.get('x', None)\n",
+    "    result['y'] = local_variables.get('x', None)\n",
+    "    # Print or use the result as needed\n",
+    "    if result is not None:\n",
+    "        print(\"Result:\", result,\" \",type(result))\n",
+    "    \n",
+    "    # You can also return the result if needed\n",
+    "    return result\n",
+    "\n",
+    "# Call the function with parameters and get the result\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: {'result': 15, 'x': None, 'y': None}   <class 'dict'>\n",
+      "Returned Result: {'result': 15, 'x': None, 'y': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_value = execute_and_return_result(5, 10)\n",
+    "print(\"Returned Result:\", result_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
